--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
-{
-    "cSpell.words": [
-        "blit",
-        "MOUSEBUTTONDOWN",
-        "popleft",
-        "pygame"
-    ]
-}
+// {
+//     "cSpell.words": [
+//         "blit",
+//         "MOUSEBUTTONDOWN",
+//         "popleft",
+//         "pygame"
+//     ]
+// }
